--- a/judge.toml
+++ b/judge.toml
@@ -9,5 +9,5 @@ image = { source = "dockerfile", path = "." }
 # 假如你用的是 Java
 run = [
   # 运行程序
-  "java -classpath ./src lexical Test3 $input",
+  "java -classpath ./src lexical $input",
 ]
